# oocdda

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: addiction.h  addiction.hpp  artifact.h  artifact.hpp  bionics.cpp  bionics.h  bionics.hpp  bodypart.cpp  bodypart.h  bodypart.hpp  color.h  color.hpp  crafting.cpp  crafting.h  crafting.hpp  dialogue.h  dialogue.hpp  disease.h  disease.hpp  enums.h  enums.hpp  event.cpp  event.h  event.hpp  facdata.h  facdata.hpp  faction.cpp  faction.h  faction.hpp  field.cpp  file_utils.cpp  file_utils.hpp  game.cpp  game.h  game.hpp  help.cpp  item.cpp  item.h  item.hpp  itype.h  (+83 more)
test/: CMakeLists.txt
test/src/: enums_test.cpp  file_utils_test.cpp  monster_type_test.cpp  point_test.cpp
